# toy-language-interpreter

./: .gitignore  README.md  install-vscode-ext.sh  update-mirror.sh
Examples/: 1000.tl  1k.tl  2000.tl  2k.tl  BigNums.tl  Code.tl  Comp.tl  Default.tl  Files.tl  Heap.tl  Infer.tl  Lambda.tl  Lazy.tl  LongInfLoop.tl  NegLit.tl  Precedence.tl  Record.tl  Str.tl  Tuple.tl  While.tl
Examples/A2/: 1.tl  2.tl  3.tl
Examples/A4/: 1.tl  3.tl
Examples/A5/: 1.tl  2.tl
Examples/Fail/: DivByZero.tl  FileDoesNotExist.tl  LongInfLoop.tl  ShortInfLoop.tl  TypeError.tl  Uninit.tl
FS/: Meta.txt  a.txt
Haskell/: Examples  FS  README.md  hie.yaml  tli.cabal
Haskell-Functional/: README.md  hie.yaml  tli.cabal
Haskell-Functional/Examples/: Factorial.tl  Fibonacci.tl  Files.tl  Heap.tl  If.tl  OOP.tl  Rec.tl  Record.tl  Subtyping.tl
Haskell-Functional/FS/: Path.txt
Haskell-Functional/src/: Main.hs
Haskell-Imperative/: FS  hie.yaml  tli-imp.cabal  tli.cabal
Haskell/Examples/: 1000.tl  Comp.tl  Files.tl  If.tl  Infer.tl  Lambda.tl  Rec.tl  Record.tl  Tuple.tl  Uninit.tl
Haskell/Examples/Fail/: Uninit.tl
Haskell/FS/: Meta.txt
Haskell/src/: AST.hs  Eval.hs  Main.hs  Opts.hs  Parser.hs  TypeCk.hs
Haskell/src/Language/TL/: AST.hs  Eval.hs  FS.hs  Opts.hs  Parser.hs  Syntax.hs  TypeCk.hs
Java/: .classpath  README.md  pom.xml  run.sh
Java/Examples/: 2000.tl  Code.tl  Comp.tl  Files.tl  Heap.tl  Infer.tl  Lambda.tl  Lazy.tl  Record.tl  Tuple.tl
Java/JavaFXResources/: modena-dark.css
Java/tli/: .project
Rust/: Cargo.toml
Rust/src/: main.rs  parser.rs  syntax.rs
src/Examples/: Code.tl  Precedence.tl  TypeError.tl
src/tli/: Main.java
src/utils/: Main.java
tl-vscode/: CHANGELOG.md  README.md  package.json
(+271 files in other folders)
