cabal-version: 2.0

name: tli
version: 0.0.0.0
synopsis: Toy Language Interpreter
author: Alex Ionescu
maintainer: alxi.2001@gmail.com
copyright: Copyright (C) 2020 Alex Ionescu
category: Interpreter
build-type: Simple
extra-source-files: README.md

executable tli
  main-is: Main.hs

  other-modules:
    Language.TL.Syntax
    Language.TL.Parser
    Language.TL.TypeCk
    Language.TL.Eval
    Language.TL.FS
    Language.TL.Opts
    Paths_tli

  autogen-modules:
    Paths_tli

  hs-source-dirs: src

  build-depends:
    base >=4.13 && <5
    , containers ^>= 0.6.2
    , directory ^>= 1.3.6
    , filepath ^>= 1.4.2
    , lens ^>= 4.19.2
    , mtl ^>= 2.2.2
    , optparse-generic ^>= 1.4.4
    , parsec ^>= 3.1.14

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Wincomplete-uni-patterns

  default-extensions:
    ApplicativeDo
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    ViewPatterns

  default-language: Haskell2010
